1.1.0
-----
* Dismantled application subclasses and moved code into components for modularity
* Compartmentalized all components into functional groups
* Fixed premature exception handling bug in engine

1.0.0
-----
* Completely reorganized component system
* Added parallel processing to batch mode
* Added link to show more results at the end of search lists
* Ctrl + mouse wheel now changes the font size in the search window
* General optimizations made on core (non-GUI) components

0.6.1
-----
* Added most major steno rules to the board diagram
* Improved board diagram scaling
* Improved text graph appearance and layout
* Console now accepts input from main text window

0.6.0
-----
* Text graphing code is now vastly improved
* More customization options for text graphing
* Tools menu with Python interpreter console is now available in plugin mode

0.5.1
-----
* Even more rules added, mostly related to vowels

0.5.0
-----
* Some components are now user-configurable
* More rules added (mostly orthographic variations)
* Lexer can now return incomplete matches at the cost of speed
* Various optimizations made on lexer and output components
* Minor output display bugs fixed

0.4.0
-----
* Program code is refactored again for better separation of components
* Most exceptions are now displayed on the main text window instead of crashing the program
* Lexer now uses the search dictionary to see if an asterisk is required because of conflicts
* Batch mode added; lexer can take input queries from a JSON dict and output all results to a file
* Standalone app can find Plover's dictionaries more easily

0.3.0
-----
* Program code is heavily refactored to allow easier re-use/extension
* Resources are now loaded correctly using pkg_resources (so they can be stored compressed)
* GUI for Plover plugin is no longer reset upon window close
* Text graph is displayed correctly more often
* Distribution documents and metadata are fixed

0.2.1
-----